--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,10 +7,7 @@
     <base href="/" />
 
     <meta name="color-scheme" content="light dark" />
-    <meta
-      name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
@@ -23,6 +20,7 @@
   </head>
 
   <body>
+    <noscript>Taste Buddy won't work without JavaScript. This means no tasteful recipes for you :/</noscript>
     <div id="app"></div>
   </body>
 
