--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+<head>
+    <meta charset="utf-8"/>
     <title>Ionic App</title>
 
-    <base href="/" />
+    <base href="/"/>
 
-    <meta name="color-scheme" content="light dark" />
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport"
+          content="target-densitydpi=device-dpi, viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="msapplication-tap-highlight" content="no"/>
 
-    <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>assets/icon/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>assets/icon/favicon.png"/>
 
-    <!-- add to homescreen for ios -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Ionic App" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  </head>
+    <!-- Color Scheme -->
+    <meta name="color-scheme" content="light dark"/>
+    <meta name="theme-color" content="#F28705" media="(prefers-color-scheme: light)"/>
 
-  <body>
-    <noscript>Taste Buddy won't work without JavaScript. This means no tasteful recipes for you :/</noscript>
-    <div id="app"></div>
-  </body>
+    <!-- Apple tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-title" content="Taste Buddy"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-touch-fullscreen" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+
+    <!-- Feature detection -->
+    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="address=no">
+
+</head>
+
+<body>
+<noscript>Taste Buddy won't work without JavaScript. This means no tasteful recipes for you :/</noscript>
+<div id="app"></div>
+</body>
 
 </html>
 
