--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Taste Buddy 🍻</title>
     <!-- 
         ████████╗ █████╗ ███████╗████████╗███████╗    ██████╗ ██╗   ██╗██████╗ ██████╗ ██╗   ██╗
@@ -18,29 +18,29 @@
     Copyright: Josef & Vasilij
     -->
 
-    <base href="/" />
+    <base href="/"/>
 
-    <meta name="viewport"
-        content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width,
+        initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="msapplication-tap-highlight" content="no"/>
 
-    <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>img/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>img/favicon.ico"/>
 
     <!-- Color Scheme -->
-    <meta name="color-scheme" content="light dark" />
-    <meta name="theme-color" content="#F28705" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#F28705" media="(prefers-color-scheme: dark)" />
+    <meta name="color-scheme" content="light dark"/>
+    <meta name="theme-color" content="#F28705" media="(prefers-color-scheme: light)"/>
+    <meta name="theme-color" content="#F28705" media="(prefers-color-scheme: dark)"/>
 
     <!-- Apple tags -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Taste Buddy" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-touch-fullscreen" content="yes" />
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>img/ios/152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>img/ios/180.png" />
-    <link rel="apple-touch-icon" sizes="256x256" href="<%= BASE_URL %>img/ios/256.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="<%= BASE_URL %>img/ios/512.png" />
-    
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-title" content="Taste Buddy"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+    <meta name="apple-touch-fullscreen" content="yes"/>
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>img/ios/152.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>img/ios/180.png"/>
+    <link rel="apple-touch-icon" sizes="256x256" href="<%= BASE_URL %>img/ios/256.png"/>
+    <link rel="apple-touch-icon" sizes="512x512" href="<%= BASE_URL %>img/ios/512.png"/>
+
 
     <!-- Feature detection -->
     <meta name="format-detection" content="telephone=no">
@@ -49,8 +49,8 @@
 </head>
 
 <body>
-    <noscript>Taste Buddy won't work without JavaScript. This means no tasteful recipes for you :/</noscript>
-    <div id="app"></div>
+<noscript>Taste Buddy won't work without JavaScript. This means no tasteful recipes for you :/</noscript>
+<div id="app"></div>
 </body>
 
 </html>
