[frontend] Improve internal structures

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -49,8 +49,8 @@
 </head>
 
 <body>
-<noscript>Taste Buddy won't work without JavaScript. This means no tasteful recipes for you :/</noscript>
-<div id="app"></div>
+<noscript>Taste Buddy won't work without JavaScript. This means no tasteful recipes for you :(</noscript>
+<div id="tastebuddy"></div>
 </body>
 
 </html>
