[frontend] Reduce LoC by using setup and improve theme

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,8 +15,8 @@
 
     <!-- Color Scheme -->
     <meta name="color-scheme" content="light dark"/>
-    <meta name="theme-color" content="#F28705" media="(prefers-color-scheme: light)"/>
-    <meta name="theme-color" content="#F28705" media="(prefers-color-scheme: dark)"/>
+    <meta name="theme-color" content="#62C370" media="(prefers-color-scheme: light)"/>
+    <meta name="theme-color" content="#4D9B5A" media="(prefers-color-scheme: dark)"/>
 
     <!-- Apple tags -->
     <meta name="apple-mobile-web-app-capable" content="yes"/>
