--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8"/>
@@ -31,6 +31,9 @@
     <!-- Feature detection -->
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="address=no">
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
 
 </head>
 
