--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="viewport-fit=cover, width=device-width,
         initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="msapplication-tap-highlight" content="no"/>
+    <meta name="robots" content="noarchive, noimageindex">
 
     <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>img/favicon.ico"/>
 
