--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,9 +33,26 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="address=no">
 
-    <!-- Web App Manifest -->
-    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Taste Buddy 🍻"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://taste-buddy.github.io"/>
+    <meta property="og:image" content="<%= BASE_URL %>img/og.jpg"/>
+    <meta property="og:description"
+          content="Elevate your meals affordably while reducing waste with Taste Buddy, the ultimate cooking companion.."/>
+    <meta property="og:site_name" content="Taste Buddy 🍻"/>
+    <meta property="og:locale" content="de"/>
+    <meta property="og:locale:alternate" content="en"/>
 
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image"/>
+
+    <!-- Google -->
+    <meta name="google-site-verification" content=""/>
+    <meta name="google" content="notranslate"/>
+
+    <!-- PWA -->
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
 </head>
 
 <body>
