--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -54,6 +54,10 @@
 
     <!-- PWA -->
     <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.bunny.net">
+    <link href="https://fonts.bunny.net/css" rel="stylesheet"/>
 </head>
 
 <body>
