[frontend] Add first implementation of ML Model to learn which recipes the user likes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,56 +7,56 @@
 
     <base href="/"/>
 
-    <meta name="viewport" content="viewport-fit=cover, width=device-width,
-        initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="msapplication-tap-highlight" content="no"/>
-    <meta name="robots" content="noarchive, noimageindex">
+    <meta content="viewport-fit=cover, width=device-width,
+        initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
+    <meta content="no" name="msapplication-tap-highlight"/>
+    <meta content="noarchive, noimageindex" name="robots">
 
-    <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>img/favicon.ico"/>
+    <link href="<%= BASE_URL %>img/favicon.ico" rel="shortcut icon" type="image/png"/>
 
     <!-- Color Scheme -->
-    <meta name="color-scheme" content="light dark"/>
-    <meta name="theme-color" content="#62C370" media="(prefers-color-scheme: light)"/>
-    <meta name="theme-color" content="#4D9B5A" media="(prefers-color-scheme: dark)"/>
+    <meta content="light dark" name="color-scheme"/>
+    <meta content="#ffffff" media="(prefers-color-scheme: light)" name="theme-color"/>
+    <meta content="#000000" media="(prefers-color-scheme: dark)" name="theme-color"/>
 
     <!-- Apple tags -->
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-title" content="Taste Buddy"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-    <meta name="apple-touch-fullscreen" content="yes"/>
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>img/ios/152.png"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>img/ios/180.png"/>
-    <link rel="apple-touch-icon" sizes="256x256" href="<%= BASE_URL %>img/ios/256.png"/>
-    <link rel="apple-touch-icon" sizes="512x512" href="<%= BASE_URL %>img/ios/512.png"/>
+    <meta content="yes" name="apple-mobile-web-app-capable"/>
+    <meta content="Taste Buddy" name="apple-mobile-web-app-title"/>
+    <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
+    <meta content="yes" name="apple-touch-fullscreen"/>
+    <link href="<%= BASE_URL %>img/ios/152.png" rel="apple-touch-icon"/>
+    <link href="<%= BASE_URL %>img/ios/180.png" rel="apple-touch-icon" sizes="180x180"/>
+    <link href="<%= BASE_URL %>img/ios/256.png" rel="apple-touch-icon" sizes="256x256"/>
+    <link href="<%= BASE_URL %>img/ios/512.png" rel="apple-touch-icon" sizes="512x512"/>
 
     <!-- Feature detection -->
-    <meta name="format-detection" content="telephone=no">
-    <meta name="format-detection" content="address=no">
+    <meta content="telephone=no" name="format-detection">
+    <meta content="address=no" name="format-detection">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Taste Buddy 🍻"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://taste-buddy.github.io"/>
+    <meta content="Taste Buddy 🍻" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="https://taste-buddy.github.io" property="og:url"/>
     <!-- TODO: Use a better image -->
-    <meta property="og:image" content="<%= BASE_URL %>img/og.jpg"/>
-    <meta property="og:description"
-          content="Elevate your meals affordably while reducing waste with Taste Buddy, the ultimate cooking companion.."/>
-    <meta property="og:site_name" content="Taste Buddy 🍻"/>
-    <meta property="og:locale" content="de"/>
-    <meta property="og:locale:alternate" content="en"/>
+    <meta content="<%= BASE_URL %>img/og.jpg" property="og:image"/>
+    <meta content="Elevate your meals affordably while reducing waste with Taste Buddy, the ultimate cooking companion.."
+          property="og:description"/>
+    <meta content="Taste Buddy 🍻" property="og:site_name"/>
+    <meta content="de" property="og:locale"/>
+    <meta content="en" property="og:locale:alternate"/>
 
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image"/>
+    <meta content="summary_large_image" name="twitter:card"/>
 
     <!-- Google -->
-    <meta name="google-site-verification" content=""/>
-    <meta name="google" content="notranslate"/>
+    <meta content="" name="google-site-verification"/>
+    <meta content="notranslate" name="google"/>
 
     <!-- PWA -->
-    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+    <link href="<%= BASE_URL %>manifest.json" rel="manifest">
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.bunny.net">
+    <link href="https://fonts.bunny.net" rel="preconnect">
     <link href="https://fonts.bunny.net/css" rel="stylesheet"/>
 </head>
 
