--- a/kiwi_cook/index.html
+++ b/kiwi_cook/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title><%= productName %></title>
+
     <meta charset="utf-8" />
-    <meta content="<%= productDescription %>" name="description" />
-    <meta content="telephone=no" name="format-detection" />
-    <meta content="no" name="msapplication-tap-highlight" />
+    <meta name="description" content="<%= productDescription %>" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
     <meta
-      content="user-scalable=no, initial-scale=1, interactive-widget=resizes-content, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
       name="viewport"
+      content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
 
     <!-- Prefetch resources -->
@@ -22,33 +23,31 @@
     <link rel="preconnect" href="https://kiwi-cook.github.io" />
     <link rel="preconnect" href="https://huggingface.co" />
 
-    
-    <!-- Favicon links -->
     <link
-      href="icons/favicon-128x128.png"
       rel="icon"
+      type="image/png"
       sizes="128x128"
-      type="image/png"
+      href="icons/favicon-128x128.png"
     />
     <link
-      href="icons/favicon-96x96.png"
       rel="icon"
+      type="image/png"
       sizes="96x96"
-      type="image/png"
+      href="icons/favicon-96x96.png"
     />
     <link
-      href="icons/favicon-32x32.png"
       rel="icon"
+      type="image/png"
       sizes="32x32"
-      type="image/png"
+      href="icons/favicon-32x32.png"
     />
     <link
-      href="icons/favicon-16x16.png"
       rel="icon"
-      sizes="16x16"
       type="image/png"
+      sizes="16x16"
+      href="icons/favicon-16x16.png"
     />
-    <link href="favicon.ico" rel="icon" type="image/ico" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />
   </head>
   <body>
     <!-- quasar:entry-point -->
